# PersonOS

./: .gitignore  IDEA.md  INSPECTION_REPORT.md  README.md  SKILL.md
.agents/skills/: README.md
00_profile/: README.md  ability_map.md  anti_patterns.md  person_profile.md  preference.md
01_projects/: README.md
01_projects/agent_shell/: README.md
01_projects/cowork_codex_bridge/: README.md  evidence_session_20260614.md
01_projects/ecommerce_digital_employee/: README.md
01_projects/mono/: README.md
01_projects/streetview_driving/: README.md
01_projects/xhs_visual_judge/: README.md
02_organs/: README.md
02_organs/coding_judgement/: README.md  (+1 more)
03_knowledge/: README.md
04_cases/: README.md  decision_cases.jsonl  failure_cases.jsonl  project_cases.jsonl  success_cases.jsonl
05_prompts/: README.md
06_eval/: README.md  person_answer_eval.jsonl  project_decision_eval.jsonl  visual_eval.jsonl
agents/: openai.yaml
references/: knowledge-schema.md
scripts/: append_case.py  find_organs.py  update_case.py  write_prompt.py
tools/: sync_skills.sh
tools/distill-mini/: .env.example  .gitignore  README.md  design-qa.md  pyproject.toml
tools/distill-mini/data/: comparisons.jsonl  dataset_sft.jsonl  inputs.jsonl  student_outputs.jsonl  teacher_outputs.jsonl
tools/distill-mini/src/distill_mini/: __init__.py  cli.py  config.py  models.py  prompts.py  service.py  storage.py  web.py
tools/distill-mini/src/distill_mini/clients/: __init__.py  manual_client.py  openai_client.py
tools/distill-mini/src/distill_mini/static/: app.css  app.js  index.html
(+108 files in other folders)
