[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personos-distill-mini"
version = "0.1.0"
description = "A minimal behavior-distillation data factory for PersonOS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.68.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
personos-distill = "distill_mini.cli:app"
personos-distill-web = "distill_mini.web:run"

[tool.hatch.build.targets.wheel]
packages = ["src/distill_mini"]
